--- a/ManageMint/ManageMint.csproj
+++ b/ManageMint/ManageMint.csproj
@@ -54,6 +54,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+        <PackageReference Include="MudBlazor" Version="6.7.0" />
     </ItemGroup>
 
 </Project>
