--- a/tests/ManageMint.UnitTests/ManageMint.UnitTests.csproj
+++ b/tests/ManageMint.UnitTests/ManageMint.UnitTests.csproj
@@ -7,15 +7,23 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>ManageMint.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CouchbaseNetClient" Version="3.4.9" />
+        <PackageReference Include="AutoBogus" Version="2.13.1" />
+        <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+        <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
         <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\ManageMint\ManageMint.csproj" />
     </ItemGroup>
 
 </Project>
