--- a/tests/ManageMint.UnitTests/ManageMint.UnitTests.csproj
+++ b/tests/ManageMint.UnitTests/ManageMint.UnitTests.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoBogus" Version="2.13.1" />
+        <PackageReference Include="FluentAssertions" Version="6.11.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
@@ -20,6 +21,8 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
         <PackageReference Include="coverlet.collector" Version="3.2.0" />
+        <PackageReference Include="Testcontainers" Version="3.3.0" />
+        <PackageReference Include="Testcontainers.MongoDb" Version="3.3.0" />
     </ItemGroup>
 
     <ItemGroup>
