rename to int tests

--- a/tests/ManageMint.IntegrationTests/ManageMint.IntegrationTests.csproj
+++ b/tests/ManageMint.IntegrationTests/ManageMint.IntegrationTests.csproj
@@ -7,7 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
-        <RootNamespace>ManageMint.UnitTests</RootNamespace>
+        <RootNamespace>ManageMint.IntegrationTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,7 +16,6 @@
         <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
-        <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
