--- a/src/ManageMint/ManageMint.csproj
+++ b/src/ManageMint/ManageMint.csproj
@@ -56,8 +56,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="IdentityModel.OidcClient" Version="5.2.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.9" />
         <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
         <PackageReference Include="MudBlazor" Version="6.7.0" />
     </ItemGroup>
