--- a/src/ManageMint/Platforms/iOS/Info.plist
+++ b/src/ManageMint/Platforms/iOS/Info.plist
@@ -28,5 +28,18 @@
     </array>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/appicon.appiconset</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>ManageMint - Local</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>manmint</string>
+            </array>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+        </dict>
+    </array>
 </dict>
 </plist>
