add manager/reports editor pane

--- a/src/ManageMint/ManageMint.csproj
+++ b/src/ManageMint/ManageMint.csproj
@@ -66,4 +66,8 @@
         <PackageReference Include="Realm" Version="11.4.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Components\" />
+    </ItemGroup>
+
 </Project>
