--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -16,6 +16,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '7.0.x'
+    
+    - name: Restore workloads
+      run: dotnet workload restore
 
     - name: Restore dependencies
       run: dotnet restore
