--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: '7.0.x'
     
     - name: Restore workloads
-      run: dotnet workload install maui maui-android
+      run: dotnet workload restore
 
     - name: Restore dependencies
       run: dotnet restore
