--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -1,70 +1,89 @@
 name: Build and Release Windows
 
 on:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
+  workflow_dispatch: 
+
+env:
+  DOTNETVERSION: 7.0.x
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: macos-12
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '7.0.x'
-    
-    - name: Restore workloads
-      run: dotnet workload restore
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '7.0.x'
 
-    - name: Restore dependencies
-      run: dotnet restore
+      - name: Setup .NET SDK ${{env.DOTNETVERSION}}
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version:  '${{env.DOTNETVERSION}}'
 
-    - name: Build
-      run: dotnet build -c Release
+      - name: List installed .NET info
+        shell: pwsh
+        run: dotnet --info
 
-    - name: Test
-      run: dotnet test
+      - name: Install .NET MAUI
+        shell: pwsh
+        run: |
+          & dotnet nuget locals all --clear
+          & dotnet workload install maui --source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet7/nuget/v3/index.json --source https://api.nuget.org/v3/index.json
+          & dotnet workload install android ios maccatalyst tvos macos maui wasm-tools maui-maccatalyst --source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet7/nuget/v3/index.json --source https://api.nuget.org/v3/index.json
+      
+      - name: Restore nuget packages
+        run: dotnet restore ManageMint.sln
+        
+      - name: Build Windows MSIX
+        run: |
+          cd src
+          dotnet publish -f net7.0-windows10.0.19041.0 -c Release -o ./artifacts
 
-    - name: Publish
-      run: dotnet publish -c Release -r win-x64 --self-contained true
+      - name: Build and Run UnitTests
+        shell: bash
+        run: |
+          dotnet build test/ManageMint.UnitTests/ManageMint.UnitTests.csproj
+          dotnet test test/ManageMint.UnitTests/ManageMint.UnitTests.csproj --no-build --verbosity normal
 
-    - name: Get Latest Tag
-      id: get_latest_tag
-      uses: actions/github-script@v4
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const { data: tags } = await github.git.listTags({
-            owner: context.repo.owner,
-            repo: context.repo.repo
-          });
-          const latestTag = tags[0].ref;
-          const tagNumber = parseInt(latestTag.replace('refs/tags/v', ''));
-          const newTag = `v${tagNumber + 1}`;
-          console.log(`Latest tag: ${latestTag}, new tag: ${newTag}`);
-          return newTag;
+      - name: Get Latest Tag
+        id: get_latest_tag
+        uses: actions/github-script@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { data: tags } = await github.git.listTags({
+              owner: context.repo.owner,
+              repo: context.repo.repo
+            });
+            const latestTag = tags[0].ref;
+            const tagNumber = parseInt(latestTag.replace('refs/tags/v', ''));
+            const newTag = `v${tagNumber + 1}`;
+            console.log(`Latest tag: ${latestTag}, new tag: ${newTag}`);
+            return newTag;
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.get_latest_tag.outputs.result }},win-x64
-        release_name: Release ${{ steps.get_latest_tag.outputs.result }}
-        draft: true
-        prerelease: false
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.get_latest_tag.outputs.result }},macos-arm64
+          release_name: Release ${{ steps.get_latest_tag.outputs.result }}
+          draft: true
+          prerelease: false
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./bin/Release/net6.0/win-x64/publish/MyApp.exe
-        asset_name: MyApp.exe
-        asset_content_type: application/octet-stream
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./artifacts/
+          asset_name: MyApp
+          asset_content_type: application/octet-stream
